2009-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/include/io.h, shared/include/mmu.h: Change extern inline to
	static inline.

2009-08-27	Joel Sherrill <joel.sherrill@OARcorp.com>

	* mpc6xx/mmu/bat.c, mpc6xx/mmu/bat.h: Fix spelling.

2009-07-20	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am, preinstall.am: Update for MPC55XX changes.
	* mpc55xx/emios/emios.c, mpc55xx/include/emios.h: New files.
	* mpc55xx/dspi/dspi.c, mpc55xx/edma/edma.c, mpc55xx/esci/esci.c,
	mpc55xx/include/dspi.h, mpc55xx/include/edma.h, mpc55xx/include/irq.h,
	mpc55xx/include/regs.h, mpc55xx/irq/irq.c: Changes throughout.

2009-05-05	Jennifer Averett <jennifer.averett@OARcorp.com>

	* mpc6xx/mmu/bat.c, new-exceptions/e500_raw_exc_init.c,
	new-exceptions/raw_exception.h, new-exceptions/bspsupport/irq_supp.h,
	shared/include/cpuIdent.c: Removed warnings. Split
	bsp_irq_dispatch_list to allow non-standard/non-existant pics to call
	with interrupts off.

2009-03-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1385/cpukit
	* mpc5xx/irq/irq_asm.S: When the type rtems_boolean was switched to the
	C99 bool, the size changed from 4 bytes to 1 byte. The interrupt
	dispatching code accesses two boolean variables for scheduling
	purposes and the assembly implementations of this code did not get
	updated.

2009-02-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* new-exceptions/cpu.c: Correct prototype of _CPU_Initialize.

2008-10-02	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shared/include/powerpc-utility.h: Use constraint "b" for address
	base registers in inline assembler statements.

	* mpc55xx/dspi/dspi.c, mpc55xx/edma/edma.c, mpc55xx/esci/esci.c,
	mpc55xx/irq/irq.c, mpc83xx/gtm/gtm.c: Update for status-checks.h
	changes.

2008-10-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	* mpc83xx/include/mpc83xx.h: #include <bspopts.h> to make sure 
	defines from bspopts.h get propagated.

2008-09-09	Thomas Doerfler <thomas.doerfler@embedded-brains.de>
