@@ -1,3 +1,8 @@
+2009-10-16	Jennifer Averett <jennifer.averett@OARcorp.com>
+
+	* mpc6xx/mmu/bat.c: Resolved bug: It is not an overlap if the batindex
+	being set is the batindex of the overlap.
+
 2009-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* shared/include/io.h, shared/include/mmu.h: Change extern inline to
